Redid exercise 1b in a different way