@@ -16,8 +16,8 @@ public class Exercise1b {
    * @returns {List<T>} The list with the last element at the front
    */
   public static <T> List<T> arrayRotate(List<T> list) {
-    list.addFirst(list.getLast());
-    list.removeLast();
+    list.add(0, list.get(list.size()-1));
+    list.remove(list.size()-1);
     return list;
   }
 }
